# python-project-lvl4

./: .env.dist  .gitignore  .travis.yml  Makefile  Procfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg
taskmanager/: asgi.py  middleware.py  settings.py  urls.py
taskmanager/tasks/: admin.py  apps.py  filters.py  models.py  urls.py  views.py
taskmanager/tasks/migrations/: 0001_initial.py  0002_auto_20200511_1839.py  0003_auto_20200511_1844.py  0004_auto_20200622_2028.py  0005_auto_20200825_2055.py
taskmanager/tasks/templates/: _base.html
taskmanager/tasks/templates/tasks/: home.html
taskmanager/templates/: base.html
taskmanager/templates/registration/: login.html
taskmanager/templates/tasks/: task_confirm_delete.html  task_detail.html  task_filter.html  task_form.html  task_list.html  taskstatus_confirm_delete.html  taskstatus_detail.html  taskstatus_form.html  taskstatus_list.html
tests/: conftest.py  factories.py  test_views.py
